<resources>
    <string name="app_name">Car Charger</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_connect">Połącz</string>
    <string name="title_activity_all_charging_operations">Lista ładowań</string>

    <string name="title_activity_main_navigation">MainNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_bottom">Car Charger</string>
    <string name="title_home">Ekran gł.</string>
    <string name="title_dashboard">Historia ład.</string>
    <string name="title_notifications">Łacznosc BT</string>
    <string name="title_activity_main2213123">Main2Activity213123</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Ustawienia główne</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Inne</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_details">Szczegóły</string>
    <string name="carModelDefault">Nissan LEAF</string>
    <string name="RemainingTimeStr">Czas do końca ładowania:</string>
    <string name="TestStr">Test2</string>
    <string name="ChargingCostStr">Koszt ładowania:</string>
    <string name="ActualAccuCapacityStr">Aktualna poj. akumulatora:</string>
    <string name="TotalAccuCapacityStr">Całkowita poj. aku.:</string>
    <string name="MaxChargingVoltageStr">Maks. wartość nap. ład.</string>
    <string name="PowerStr">Moc</string>
    <string name="nazwa_parametruStr">Nazwa parametru</string>
    <string name="Wartosci_Skladowe_Str">Wartości składowe wybranego parametru</string>
    <string name="OperationsNumberStr">Liczba operacji</string>
    <string name="Close_Popup_Str">Zamknij okno</string>
    <string name="ID_operation_popupStr">ID</string>
    <string name="Value_popupStr">Wartość</string>
    <string name="OperationNumberPopupStr">Nr. operacji</string>
    <string name="kwh_popupStr">kWh</string>
    <string name="NullStr">null</string>
    <string name="PolishCurrencyStr">zł</string>
    <string name="AfterChargCapacityStr">Poj. po ład.</string>
    <string name="kwStr">kW</string>
    <string name="AveragePowerStr">Średnia moc</string>
    <string name="CostStr">Koszt</string>
    <string name="minutesStr">min</string>
    <string name="ChargingTimeStr">Czas ład.</string>
    <string name="InitialCapaciryStr">Poj. począt.</string>
</resources>
