<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="350dp"
    android:layout_height="425dp"
    android:orientation="vertical"
    android:padding="5dp"

    android:background="@color/popupBackgroud"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtCarModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/TestStr"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/TestStr"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtDateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/TestStr"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_1"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/kwh_popupStr"
                android:textColor="@color/white"
                android:background="@drawable/popup_circle"
                android:layout_marginRight="5dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtCapacityCharged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp"

                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AfterChargCapacityStr"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_2"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/kwStr"
                android:textColor="@color/white"
                android:background="@drawable/popup_circle"
                android:layout_marginRight="5dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtAveragePower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AveragePowerStr"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_3">



            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/PolishCurrencyStr"
                android:textColor="@color/white"
                android:background="@drawable/popup_circle"
                android:layout_marginRight="5dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CostStr"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_4"
            android:layout_marginRight="10dp">



            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/minutesStr"
                android:textColor="@color/white"
                android:background="@drawable/popup_circle"
                android:layout_marginRight="5dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />


            <TextView
                android:id="@+id/txtElapsedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChargingTimeStr"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_5"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:background="@drawable/popup_circle"
                android:gravity="center"
                android:text="@string/kwh_popupStr"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtInitialCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InitialCapaciryStr"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/popup_background_6">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:background="@drawable/popup_circle"
                android:gravity="center"
                android:text="@string/TestStr"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NullStr"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TestStr"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:id="@+id/button55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="@string/Close_Popup_Str"
            android:textColor="@color/white"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/btnDeleteCharging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="USUŃ REKORD"
            android:textColor="@color/white" />
    </LinearLayout>





</LinearLayout>